# conan-ros-index

./: .conanrc  .gitignore  LICENSE  conanfile.py  readme.md
.github/: run_ci_tests.py
.github/workflows/: conan-create-ros-kilted.yml  run-example-tests.sh
examples/consumer_cmake/: CMakeLists.txt  ci-commands.sh  ci_test_example.py  conanfile.py  graph.html  readme.md
examples/consumer_cmake/src/: main.cpp
examples/consumer_colcon/: ci_test_example.py  conanfile.py  conanfile.txt  readme.md
examples/consumer_colcon/src/consumer_node/: CMakeLists.txt  package.xml
examples/consumer_colcon/src/consumer_node/src/: main.cpp
examples/consumer_colcon/src/dummy_lib/: CMakeLists.txt  package.xml
examples/consumer_colcon/src/dummy_lib/include/dummy_lib/: print.hpp
examples/consumer_colcon/src/dummy_lib/src/: print.cpp
examples/consumer_colcon_cpp/: .gitignore  ci-commands.sh  conanfile.py
examples/pose_estimation/: CMakeLists.txt  ci-commands.sh  ci_test_example.py  conanfile.py  conanfile.txt
examples/pose_estimation/src/: pose-estimation.cpp
profiles/: macos-clang  windows-msvc
recipes/orocos_kdl/all/: conandata.yml  conanfile.py
recipes/orocos_kdl/all/test_package/: CMakeLists.txt  conanfile.py  main.cpp
recipes/python_orocos_kdl/all/: conandata.yml  conanfile.py
recipes/python_orocos_kdl/all/patches/: 0002-conan-pykdl-cmake.patch  0003-pykdl-drop-hash-msvc.patch  0004-cmake-python3-site-version.patch
recipes/python_orocos_kdl/all/test_package/: conanfile.py
recipes/ros-kilted/: config.yml
recipes/ros-kilted/all/: conandata.yml  conanfile.py
recipes/ros-kilted/all/patches/: 0001-google-benchmark-vendor-conan-shared-benchmark.patch  0002-rosidl-generator-py-msvc-short-object-dir.patch  0003-rviz-ogre-vendor-ogre-lod-cpp17.patch  0004-rviz-ogre-vendor-conan-zlib-freetype-windows.patch  0005-orocos-kdl-vendor-boost-interface.patch  0005-orocos-kdl-vendor-conan-and-boost.patch  0005-rviz-ogre-vendor-ogre-assimp-conan-target.patch  0006-rviz-ogre-vendor-msvc-runtime-for-ogre-subbuild.patch  0007-python-orocos-kdl-vendor-conan-and-apple.patch  0007-python-orocos-kdl-vendor-conan-pykdl-link.patch  0007-python-orocos-kdl-vendor-strip-pyhash-apple.patch  0007-rviz-ogre-vendor-extras-conan-zlib-windows.patch  0008-foonathan-memory-vendor-use-conan.patch  0008-python-orocos-kdl-vendor-prefer-conan-pykdl.patch  0009-mcap-vendor-use-conan.patch  0009-orocos-kdl-vendor-prefer-conandeps-config.patch  0011-gz-cmake-vendor-extras-prepend-opt-prefix.patch  0011-gz-utils-vendor-prepend-gz-cmake-prefix.patch  0012-gz-utils-vendor-extras-prepend-opt-prefix.patch  0013-gz-math-vendor-extras-prepend-opt-prefix.patch  ogre-1.12.10-fix-macos-sysroot.patch
recipes/ros-kilted/all/test_package/: CMakeLists.txt  conanfile.py
recipes/rust/: config.yml
recipes/rust/all/: conandata.yml  conanfile.py
recipes/rust/all/test_package/: conanfile.py
recipes/zenoh-c/all/: conandata.yml  conanfile.py
recipes/zenoh-c/all/test_package/: CMakeLists.txt  conanfile.py  main.c
recipes/zenoh-cpp/all/: conandata.yml  conanfile.py
test/: __init__.py  examples_tools.py
test_package/: conanfile.py  demo_smoke.py
(+7 files in other folders)
