<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>consumer_node</name>
  <version>0.0.0</version>
  <description>Minimal colcon C++ consumer example (rclcpp node).</description>
  <maintainer email="support@jfrog.com">JFrog</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dummy_lib</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
