<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_lib</name>
  <version>0.0.0</version>
  <description>Dummy static library with a print helper for the consumer_colcon_cpp example.</description>
  <maintainer email="support@jfrog.com">JFrog</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
